[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "deploie"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["cpython/extension-module"]

[tool.poetry.dependencies]
python = "^3.6"
torch = {version = "^1.0", features = ["torch"]}
transformers = "^4.10"
